--- a/WEB/App.Api/project.json
+++ b/WEB/App.Api/project.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "version": "1.0.1",
-      "type": "platform"
-    },
+    "Autofac": "4.4.0",
+    "Autofac.Extensions.DependencyInjection": "4.0.0",
+    "Autofac.WebApi2": "4.0.1",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.Routing": "1.0.1",
@@ -15,32 +14,29 @@
     "Microsoft.Extensions.Logging": "1.0.0",
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "Autofac": "4.4.0",
-    "Autofac.Extensions.DependencyInjection": "4.0.0"  },
+    "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0"
+  },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
-      "imports": [
-        "dotnet5.6",
-        "portable-net45+win8"
-      ]
+    "net452": {
+      "dependencies": {
+        "App.Business": {
+          "target": "project"
+        },
+        "App.ModuleRegistration": {
+          "target": "project"
+        }
+      }
     }
   },
 
   "buildOptions": {
     "emitEntryPoint": true,
     "preserveCompilationContext": true
-  },
-
-  "runtimeOptions": {
-    "configProperties": {
-      "System.GC.Server": true
-    }
   },
 
   "publishOptions": {
