--- a/AppLayers/App.Repositories/App.Repositories.csproj
+++ b/AppLayers/App.Repositories/App.Repositories.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{56AE87AE-E72F-45CE-93A2-015B562485C8}</ProjectGuid>
+    <ProjectGuid>{4ACC95AF-4E7B-4EDD-BB82-526A98FE42BE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>App.DataAccess</RootNamespace>
-    <AssemblyName>App.DataAccess</AssemblyName>
+    <RootNamespace>App.Repositories</RootNamespace>
+    <AssemblyName>App.Repositories</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,8 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="VehicleRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\App.Interfaces\App.Interfaces.csproj">
+      <Project>{75707ffe-aa3d-4775-a5e6-f28b71ff0b50}</Project>
+      <Name>App.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\App.Data\App.Data.csproj">
+      <Project>{dcdba12c-f717-41f4-bfdd-baa277e6dd1b}</Project>
+      <Name>App.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
