--- a/AppLayers/App.Business/App.Business.csproj
+++ b/AppLayers/App.Business/App.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{49479977-5D0C-4EA6-8D08-34F5072A047A}</ProjectGuid>
+    <ProjectGuid>{FB806CF4-9F0C-4BCF-94D4-9E06182E2A04}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>App.ModuleRegistration</RootNamespace>
-    <AssemblyName>App.ModuleRegistration</AssemblyName>
+    <RootNamespace>App.Business</RootNamespace>
+    <AssemblyName>App.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,47 +31,31 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Autofac.4.4.0\lib\net45\Autofac.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppRoot.cs" />
-    <Compile Include="BusinessModules.cs" />
-    <Compile Include="DataAccessModules.cs" />
-    <Compile Include="IAssemblyMarker.cs" />
+    <Compile Include="VehicleManagment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryModules.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\AppLayers\App.Business\App.Business.csproj">
-      <Project>{fb806cf4-9f0c-4bcf-94d4-9e06182e2a04}</Project>
-      <Name>App.Business</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\AppLayers\App.Data\App.Data.csproj">
-      <Project>{dcdba12c-f717-41f4-bfdd-baa277e6dd1b}</Project>
-      <Name>App.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\AppLayers\App.Repositories\App.Repositories.csproj">
-      <Project>{4acc95af-4e7b-4edd-bb82-526a98fe42be}</Project>
-      <Name>App.Repositories</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\App.DataModels\App.DataModels.csproj">
-      <Project>{bcb83930-c305-4bd1-9f83-e0c2da75f11d}</Project>
+    <ProjectReference Include="..\..\Infrastructure\App.DataModels\App.DataModels.csproj">
+      <Project>{BCB83930-C305-4BD1-9F83-E0C2DA75F11D}</Project>
       <Name>App.DataModels</Name>
     </ProjectReference>
-    <ProjectReference Include="..\App.Interfaces\App.Interfaces.csproj">
+    <ProjectReference Include="..\..\Infrastructure\App.Interfaces\App.Interfaces.csproj">
       <Project>{75707FFE-AA3D-4775-A5E6-F28B71FF0B50}</Project>
       <Name>App.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\App.Repositories\App.Repositories.csproj">
+      <Project>{4acc95af-4e7b-4edd-bb82-526a98fe42be}</Project>
+      <Name>App.Repositories</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
