--- a/Infrastructure/App.Interfaces/App.Interfaces.csproj
+++ b/Infrastructure/App.Interfaces/App.Interfaces.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\IVehicleManagement.cs" />
-    <Compile Include="DataAccess\IDataAccess,cs.cs" />
+    <Compile Include="DataAccess\IDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IVehicleRepository.cs" />
   </ItemGroup>
