--- a/WEB/App.Api/Properties/launchSettings.json
+++ b/WEB/App.Api/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/vehicles",
+      "launchUrl": "api/v1/vehicles",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -19,7 +19,7 @@
     "App.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000/api/values",
+      "launchUrl": "http://localhost:5000/api/v1/vehicles",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
