--- a/Infrastructure/App.Interfaces/App.Interfaces.csproj
+++ b/Infrastructure/App.Interfaces/App.Interfaces.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DataAccess\IDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IVehicleRepository.cs" />
+    <Compile Include="Repositories\Mappers\IDataMapper.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
