--- a/WEB/App.Api/project.json
+++ b/WEB/App.Api/project.json
@@ -4,6 +4,7 @@
     "Autofac.Extensions.DependencyInjection": "4.0.0",
     "Autofac.WebApi2": "4.0.1",
     "Microsoft.ApplicationInsights.AspNetCore": "1.0.0",
+    "Microsoft.AspNetCore.Cors": "1.1.1",
     "Microsoft.AspNetCore.Mvc": "1.0.1",
     "Microsoft.AspNetCore.Routing": "1.0.1",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
